--- a/web_main/static/subweb/listtour.html
+++ b/web_main/static/subweb/listtour.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="header-content">
-                <h1>About Us<br />Q & T Travel</h1>
+                <h1>Tour List<br />Q & T Travel</h1>
                 <p>We bring you unforgettable experiences through upcoming journeys. The world holds many undiscovered treasures, let us guide you to immerse yourself in nature,
                  where your soul can find peace as tranquil as the mountains.</p>
             </div>
